# core-api-haskell

./: .gitignore  LICENSE  README.md  core-api.cabal
examples/: example1.hs
src/: Core.hs
