name:                core-api
version:             0.1.0.0
synopsis:            An API that abstracts IO into "places"
description:         Please see README.md
homepage:            https://github.com/richard-gebbia/core-api-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Richard Gebbia
maintainer:          richard.gebbia@gmail.com
copyright:           2016 Richard Gebbia
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Core
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , contravariant

source-repository head
  type:     git
  location: https://github.com/richard-gebbia/core-api-haskell
